--- a/arch/arm64/configs/RMX1971_defconfig
+++ b/arch/arm64/configs/RMX1971_defconfig
@@ -45,6 +45,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
+# CONFIG_ARM64_ERRATUM_843419 is not set
 #CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 CONFIG_MODULES=y
