--- a/arch/arm64/configs/RMX1971_defconfig
+++ b/arch/arm64/configs/RMX1971_defconfig
@@ -826,3 +826,7 @@ CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_QCA_CLD_WLAN=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
