--- a/arch/arm64/configs/RMX1971_defconfig
+++ b/arch/arm64/configs/RMX1971_defconfig
@@ -19,25 +19,18 @@ CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_BLK_CGROUP=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
-#ifdef VEDOR_EDIT
-#zhoumingjun@Swdp.shanghai, 2017/07/13 add configuration for elsa stubs
-#CONFIG_ELSA_STUB=y
-#endif
-#ifdef VEDOR_EDIT
-#Kun.Zhou@ROM.Framework, 2019/09/23, add for hans freeze manager
 CONFIG_OPPO_HANS=y
-#endif
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
@@ -51,38 +44,26 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
+CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-#ifndef VENDOR_EDIT
-#wenbin.liu@PSW.BSP.MM, 2018/06/14  Delete for improve performance
-#CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
-#else
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
-#endif /*VENDOR_EDIT*/
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-#ifdef VENDOR_EDIT
-#Yuanliu.Tang@PSW.CN.WiFi.Basic.SwitchWiFi.753697, 2016/07/13,
-#Remove for avoid signature issue cause WiFi switching fail
 # CONFIG_MODULE_SIG is not set
 # CONFIG_MODULE_SIG_FORCE is not set
-#endif /* VENDOR_EDIT */
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SDM670=y
 CONFIG_PCI=y
+CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
-#ifndef VENDOR_EDIT
-#wenbin.liu@PSW.BSP.MM, 2018/06/14 Delete for improve performance
-#CONFIG_HZ_100=y
-#else
 CONFIG_HZ_250=y
-#endif /*VENDOR_EDIT*/
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
@@ -99,20 +80,19 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
@@ -136,6 +116,10 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_CDG=y
+CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -204,6 +188,7 @@ CONFIG_NETFILTER_XT_MATCH_STATISTIC=y
 CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
+CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
@@ -267,28 +252,19 @@ CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
-#ifdef VENDOR_EDIT
-#Weiwei.Deng@CN.NFC.Basic.Hardware.2078458, 2019/06/08,
-#Modify for the kernel Macro for NXP NFC kernel
-#CONFIG_NFC_NQ=y
-#else /* VENDOR_EDIT */
 CONFIG_NFC_PN553_DEVICES=y
 CONFIG_NXP_P73_DEVICES=y
-#endif /* VENDOR_EDIT */
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_AQT_REGMAP=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_ZRAM=y
+CONFIG_CRYPTO_LZ4=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
-CONFIG_QCOM_XR_SMRTVWR_MISC=y
-CONFIG_TUSB1064_XR_MISC=y
-CONFIG_VXR200_XR_MISC=y
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
@@ -343,45 +319,36 @@ CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
-#ifdef VENDOR_EDIT /* Jianchao.Shi@BSP.CHG.Basic, 2018/05/25, sjc Add for SONY ps3/ps4 */
 CONFIG_JOYSTICK_XPAD=y
-CONFIG_HID_SONY=y
 CONFIG_SONY_FF=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
-#endif
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHPANEL_OPPO=y
 CONFIG_TOUCHPANEL_SYNAPTICS=y
 CONFIG_TOUCHPANEL_SYNAPTICS_S3706=y
-#ifdef VENDOR_EDIT//GU.Qicai@psw.bsp.tp 2018/12/18 enable qos for tp
 CONFIG_TOUCHIRQ_UPDATE_QOS=y
-#endif
 CONFIG_INPUT_MISC=y
 CONFIG_TOUCHPANEL_MULTI_NOFLASH=y
 CONFIG_TOUCHPANEL_HIMAX=y
 CONFIG_TOUCHPANEL_HIMAX_HX83112A_NOFLASH=y
-#ifndef VENDOR_EDIT//GU.Qicai@psw.bsp.tp 2018/05/19 del for closing hbtp
 #CONFIG_INPUT_HBTP_INPUT=y
-#endif
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO_SERPORT is not set
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
-#ifdef VENDOR_EDIT	//Nanwei.Deng@BSP.CHG.Basic add serial console in 2018-05-16
 CONFIG_SERIAL_MSM_GENI=y
 CONFIG_SERIAL_MSM_GENI_CONSOLE=y
-#endif
 CONFIG_DIAG_CHAR=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+# CONFIG_MSM_RDBG is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_QCOM_GENI=y
 CONFIG_SPI=y
@@ -401,9 +368,6 @@ CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_NX30P6093=y
 CONFIG_QPNP_FG_GEN3=y
-#ifdef VENDOR_EDIT 
-#/* tongfeng.Huang@BSP.CHG.Basic, 2018/04/14,  Modify for charging */
-#CONFIG_SMB1355_SLAVE_CHARGER=y
 CONFIG_QPNP_SMB2=y
 CONFIG_OPPO_CHARGER=y
 CONFIG_OPPO_SDM670Q_CHARGER=y
@@ -414,9 +378,7 @@ CONFIG_OPPO_SHIP_MODE_SUPPORT=y
 CONFIG_OPPO_SHORT_C_BATT_CHECK=y
 CONFIG_OPPO_CHECK_CHARGERID_VOLT=y
 CONFIG_OPPO_SHORT_IC_CHECK=y
-#CONFIG_QPNP_QNOVO=y
 CONFIG_SMB1390_CHARGE_PUMP=y
-#endif
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
@@ -451,28 +413,23 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
-CONFIG_DVB_MPQ=m
-CONFIG_DVB_MPQ_DEMUX=m
+# CONFIG_DVB_MPQ is not set
+# CONFIG_DVB_MPQ_DEMUX is not set
 CONFIG_DVB_MPQ_SW=y
 CONFIG_QCOM_KGSL=y
 CONFIG_DRM=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_VIRTUAL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
+CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -555,7 +512,6 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-#CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_GSI=y
@@ -568,7 +524,9 @@ CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_QPNP_COINCELL=y
 CONFIG_QPNP_REVID=y
 CONFIG_USB_BAM=y
+CONFIG_MSM_11AD=y
 CONFIG_SEEMP_CORE=y
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_MSM_GCC_SDM845=y
 CONFIG_MSM_VIDEOCC_SDM845=y
@@ -585,17 +543,11 @@ CONFIG_MSM_QMP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_QCOM_LAZY_MAPPING=y
-# ifdef VENDOR_EDIT
-# rendong.shi@BSP.kernel.debug,2017/5/20,remove for some secure issue from qcom request
-# CONFIG_IOMMU_DEBUG=y
-# CONFIG_IOMMU_DEBUG_TRACKING=y
-# CONFIG_IOMMU_TESTS=y
-# endif
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_SDM670_LLCC=y
 CONFIG_QCOM_QCS605_LLCC=y
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_MSM_SERVICE_LOCATOR=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
 CONFIG_MSM_BOOT_STATS=y
@@ -633,10 +585,6 @@ CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_PM=y
-#ifdef VENDOR_EDIT
-#guqicai@BSP.TP.Basic, 2019/04/23, remove for motor driver
-#CONFIG_MSM_QBT1000 is not set
-#endif
 CONFIG_QCOM_DCC_V2=y
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
@@ -661,7 +609,6 @@ CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_NVMEM=y
-# CONFIG_NVMEM_SYSFS is not set
 CONFIG_QCOM_QFPROM=y
 CONFIG_SENSORS_SSC=y
 CONFIG_MSM_TZ_LOG=y
@@ -670,13 +617,9 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
 CONFIG_EXT4_FS_ENCRYPTION=y
 CONFIG_EXT4_FS_ICE_ENCRYPTION=y
-#ifdef VENDOR_EDIT
-#//yh@PSW.BSP.Storage.EXT4, 2018-11-26 add for ext4 async discard suppot
 CONFIG_EXT4_ASYNC_DISCARD_SUPPORT=y
-#endif
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
-CONFIG_F2FS_CHECK_FS=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
@@ -685,10 +628,8 @@ CONFIG_FUSE_FS=y
 CONFIG_OVERLAY_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-#ifdef VENDOR_EDIT//Fanhong.Kong@ProDrv.CHG,add 2016/6/20 for kernel 3.18 exfat
 CONFIG_NLS_UTF8=y
 CONFIG_EXFAT_FS=y
-# endif
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
@@ -698,24 +639,12 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
-#ifdef VENDOR_EDIT //Haitao.Zhou@BSP.Kernel.Stability, 2017/05/14, Modify for cut down the reboot time
 CONFIG_PANIC_TIMEOUT=1
-#endif
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_IPC_LOGGING=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_DEBUG_ALIGN_RODATA=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_QCOM_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
 CONFIG_PFK=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
@@ -741,92 +670,31 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
-#ifdef VENDOR_EDIT
-#//zhenwenxian@BSP.Power.Basic, 2017/01/12, Add for NV recovery
 CONFIG_RECORD_MDMRST=y
-#endif /* VENDOR_EDIT */
-# ifdef VENDOR_EDIT /*Modified by Tong.han@Bsp.group.Tp for common soft,2015-01-20*/
 CONFIG_OPPO_COMMON_SOFT=y
 CONFIG_OPPO_DEVICE_IFNO=y
 CONFIG_OPPO_ARCH_FILE=y
-#ifdef VENDOR_EDIT
-#Ran.Chen@BSP.Fingerprint.Basic, 2018/04/25, Add for FPC driver
 CONFIG_OPPO_FINGERPRINT=y
 CONFIG_OPPO_FINGERPRINT_QCOM=y
-#endif
-# endif /*VENDOR_EDIT*/
-
-#ifdef VENDOR_EDIT
-#Fei.Mo@BSP.Bootloader.Bootflow, 2018/11/08, Add for motor
 CONFIG_OPPO_MOTOR=y
 CONFIG_MOTOR_DETECT_QOS=y
-#endif
-#/* Huacai.Zhou@PSW.BSP.Kernel.MM, 2018-07-07, add alloc wait monitor support*/
 CONFIG_OPPO_MEM_MONITOR=y
 CONFIG_OPPO_FG_OPT=y
 CONFIG_OPPO_HEALTHINFO=y
 CONFIG_SLAB_STAT_DEBUG=y
 CONFIG_SLABINFO=y
-#endif /*VENDOR_EDIT*/
-#ifdef VENDOR_EDIT
-#Qicai.Gu@Bsp.Group.Tp, 2019/4/29, Add for motor cal data
 CONFIG_MOTOR_KERNEL_CAL_DATA=y
-#endif
-
-#ifdef VENDOR_EDIT
-#long.gao@PSW.hypnus, 2019/05/17, Add hypnus driver
-CONFIG_OPPO_HYPNUS=y
-#endif
-
-#ifdef VENDOR_EDIT //fangpan@Swdp.shanghai,2015/11/12 add the hung task detect
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=60
 CONFIG_DEATH_HEALER=y
-#endif
-# ifdef VENDOR_EDIT
-# YiXue.Ge@PSW.BSP.Kernel.Driver,2017/07/03, Add for enable lz4 compress for zram
-CONFIG_CRYPTO_LZ4=y
-# endif
-# ifdef VENDOR_EDIT
-# YiXue.Ge@PSW.BSP.Kernel.Driver,2017/07/03, Add for enable PGTABLE_MAPPING
 CONFIG_PGTABLE_MAPPING=y
-# endif
-
-#ifdef VENDOR_EDIT
-#Fei.Mo@BSP.Bootloader.Bootflow, 2018/10/20, Add for CONFIG_CRYPTO_SHA512
 CONFIG_CRYPTO_SHA512=y
-#endif
-#ifdef VENDOR_EDIT
-#Zhenlong.Liu@PSW.NW.IMS.1846323, 2019/19/21, Add for resolve not display peer side video issue
 CONFIG_SOCKEV_NLMCAST=y
-#endif
-#ifdef COLOROS_EDIT
-#Honghui.Sun@Plf.Framework, 2019/8/9, Add for get pid name by frameworks
 CONFIG_OPPO_COLOR_EM=y
-#endif
-
-#ifdef VENDOR_EDIT
-#Peifeng.Li@PSW.BSP.KERNEL, 2019-8-5, enable psi
 CONFIG_PSI=y
-# CONFIG_PSI_DEFAULT_DISABLED is not set
-#endif
-#ifdef VENDOR_EDIT
-#Kui.Zhang@TEC.Kernel.MM, 2019-05-10, add reserved vma for emergency mmap
 CONFIG_VIRTUAL_RESERVE_MEMORY=y
-#endif
-#ifdef VENDOR_EDIT
-#/* Kui.Zhang@PSW.BSP.Kernel.Performance, 2018-11-07, add process reclaim.*/
-CONFIG_PROCESS_RECLAIM=y
-#endif
-
-#ifdef VENDOR_EDIT
-#/* sen.wang@PSW.BSP.Kernel.Stability, 2019-11-07, rpmh timeout confirm if there is irq storm */
 CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
-#endif
-
-CONFIG_BUILD_ARM64_DT_OVERLAY=y
-CONFIG_QCA_CLD_WLAN=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
